Time: 46 ms (46.95%), Space: 72.6 MB (22.56%) - LeetHub