@@ -18,41 +18,64 @@ class Solution {
     3. return with the value.
         
     */
-    Map<String, List<String>> map = new HashMap<>();
-    public List<List<String>> wordSquares(String[] words) {
-        
-        List<List<String>> res = new ArrayList<>();
-        if (words == null || words.length == 0) {
-            return res;
-        }
-        for (String word : words) {
-            for (int i = 1; i < word.length(); ++i) {
-                String sub = word.substring(0, i);
-                map.putIfAbsent(sub, new ArrayList<>());
-                map.get(sub).add(word);
-            }
-        }
-        for (String word : words) {
-            List<String> path = new ArrayList<>();
-            path.add(word);
-            dfs(word, 1, path, res);
-        }
-        return res;
-    }
     
-    private void dfs(String word, int index, List<String> path, List<List<String>> res) {
-        if (index == word.length()) {
-            res.add(new ArrayList<>(path));
+    int N = 0;
+    String[] words = null;
+    HashMap<String, List<String>> prefixHashTable = null;
+
+    public List<List<String>> wordSquares(String[] words) {
+        this.words = words;
+        this.N = words[0].length();
+
+        List<List<String>> results = new ArrayList<List<String>>();
+        this.buildPrefixHashTable(words);
+
+        for (String word : words) {
+            LinkedList<String> wordSquares = new LinkedList<String>();
+            wordSquares.addLast(word);
+            this.backtracking(1, wordSquares, results);
+        }
+        return results;
+    }
+
+    protected void backtracking(int step, LinkedList<String> wordSquares, List<List<String>> results) {
+        if (step == N) {
+            results.add((List<String>) wordSquares.clone());
             return;
         }
-        StringBuilder sb = new StringBuilder();
-        for (String w : path) {
-            sb.append(w.charAt(index));
+
+        StringBuilder prefix = new StringBuilder();
+        for (String word : wordSquares) {
+            prefix.append(word.charAt(step));
         }
-        for (String w : map.getOrDefault(sb.toString(), new ArrayList<>())) {
-            path.add(w);
-            dfs(w, index + 1, path, res);
-            path.remove(path.size() - 1);
+
+        for (String candidate : this.getWordsWithPrefix(prefix.toString())) {
+            wordSquares.addLast(candidate);
+            this.backtracking(step + 1, wordSquares, results);
+            wordSquares.removeLast();
         }
+    }
+
+    protected void buildPrefixHashTable(String[] words) {
+        this.prefixHashTable = new HashMap<String, List<String>>();
+
+        for (String word : words) {
+            for (int i = 1; i < this.N; ++i) {
+            String prefix = word.substring(0, i);
+            List<String> wordList = this.prefixHashTable.get(prefix);
+            if (wordList == null) {
+                wordList = new ArrayList<String>();
+                wordList.add(word);
+                this.prefixHashTable.put(prefix, wordList);
+                } else {
+                wordList.add(word);
+                }
+            }
+        }
+    }
+
+    protected List<String> getWordsWithPrefix(String prefix) {
+        List<String> wordList = this.prefixHashTable.get(prefix);
+        return (wordList != null ? wordList : new ArrayList<String>());
     }
 }
